--- a/dowodnowy.css
+++ b/dowodnowy.css
@@ -1,336 +1,356 @@
-<!DOCTYPE html>
-<html lang="pl">
-</head>
+body {
+    font-family: "Roboto Medium", "Roboto", sans-serif;
+    letter-spacing: 0.2px;
+}
 
 
-<meta name="viewport" content="width=device-width">
-    <title>mObywatel 2.0</title>
-    <link rel="shortcut icon" href="mobywatellogo.svg" type="image/x-icon">
-    <meta name="theme-color" content="#fff">
-    <meta name="next-head-count" content="5">
-
-    <meta name="apple-mobile-web-app-capable" content="yes">
-
-    <script src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/sw.js"></script>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-    <link rel="manifest" href="http://demobywatel.mcsite.ws/apka-3-0/manifest.json">
-
-    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-    <meta name="format-detection" content="telephone=no">
-    <meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-</head>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link id="chromealerabat-link" rel="stylesheet" type="text/css" href="chrome-extension_/dacdinoicboceafielngnmjjplncljhj/content.html">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">    
-<html>
-    <style>
-
-                @font-face {
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: 100;
-            src: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/roboto_light.ttf) format("truetype");
-        }
-
-        @font-face {
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: 300;
-            src: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/roboto_regular.ttf) format("truetype");
-        }
-
-        @font-face {
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: 400;
-            src: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/roboto_medium.ttf) format("truetype");
-        }
-
-        @font-face {
-            font-family: Roboto;
-            font-style: italic;
-            font-weight: 400;
-            src: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/roboto_medium_italic.ttf) format("truetype");
-        }
-
-        @font-face {
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: 500;
-            src: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/roboto_bold.ttf) format("truetype");
-        }
-
-        @font-face {
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: 700;
-            src: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/roboto_black.ttf) format("truetype");
-        }
-
-        @font-face {
-            font-family: Roboto;
-            font-style: normal;
-            font-weight: 900;
-            src: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/roboto_medium_numbers.ttf) format("truetype");
-        }
-
-        :root {
-            --blue-active: #064792;
-        }
-
-        * {
-            user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            -webkit-user-select: none;
-            -webkit-touch-callout: none;
-            box-sizing: border-box;
-        }
-
-        img {
-            pointer-events: none;
-        }
-
-        body, html {
-            height: 100%;
-            overscroll-behavior-y: contain;
-            padding: 0;
-            margin: 0;
-            font-family: Roboto, sans-serif;
-            background: #f5f6fb;
-            color: #131419;
-        }
-
-        a {
-            color: inherit;
-            text-decoration: none;
-        }
-
-        .spinner {
-            width: 1em;
-            height: 1em;
-            border-radius: 50%;
-            border: .2em solid #dfdfdf;
-            border-right-color: #dd1b42;
-            animation: spinner-d3wgkg 1s linear infinite;
-        }
-
-        @keyframes spinner-d3wgkg {
-            to {
-                transform: rotate(1turn);
-            }
-        }
-
-
-        .Documents_container__SBKda {
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            padding: 20px;
-        }
-
-        .Documents_toolbox__xju7f {
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-end;
-            color: var(--blue-active);
-        }
-
-        .Documents_toolboxItem__2k7_t {
-            font-weight: 300;
-            font-size: 1em;
-            margin: 0 10px;
-            cursor: pointer;
-        }
-
-        .Documents_title__Q_ZwV {
-            font-weight: 500;
-            margin-bottom: .3em;
-            margin-top: .8em;
-            font-size: 2.2em;
-            font-weight: bold;
-        }
-
-        .Documents_searchContainer__H3tzU {
-            position: relative;
-            width: 100%;
-        }
-
-        .Documents_search__Ttv2M {
-            width: 100%;
-            background-color: #e5e6eb;
-            border: none;
-            border-radius: .6em;
-            font-size: 1em;
-            font-weight: 600;
-            padding: .5em .5em .5em 2.5em;
-        }
-
-        .Documents_search__Ttv2M::placeholder {
-            color: #7b7c81;
-        }
-
-        .Documents_searchIcon__RYaih {
-            position: absolute;
-            top: 50%;
-            left: .7em;
-            transform: translateY(-50%);
-            width: 1.4em;
-            height: 1.4em;
-            pointer-events: none;
-        }
-
-        .Documents_singleCard__mzcqx {
-            background-color: #fff;
-            border-radius: .4em;
-            padding: 1em;
-            justify-content: space-between;
-            cursor: pointer;
-            margin: 1em 0;
-        }
-
-.Documents_singleCard__mzcqx {
+header {
+    position: sticky;
+    top: -1;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
     display: flex;
+    align-items: center;
+    padding: 24px;
+    font-weight: 600;
+    color: #1d1d1d;
+    justify-content: space-between;
+    font-size: 18px;
+    background-color: #ffffff;
+}
+
+p.czas {
+    text-align: center;
+    color: #4a4a4a;
+    font-size: 12px;
+}
+
+main {
+    position: relative;
+    background-image: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/dowod_files/dowodnowybg.png);
+    margin: 16px 20px 0px 20px;
+    height: 385px;
+    display: flex;
+    border-radius: 12px 12px 0px 0px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+}
+
+#lew {
+    position: relative;
+    margin: 20px;
+    width: 45%;
+}
+
+#lew #zdjecie {
+    border-radius: 16px;
+    width: 100%;
+}
+
+#lew #flaga {
+    width: 70%;
+    margin: 0;
+}
+
+#lew #godlo {
+    width: 32%;
+}
+
+#lew p {
+    font-size: 11px;
+    color: #808080;
+}
+
+#rzecz {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+}
+#rzecz p{
+    margin-left: 4px;
+}
+#praw{
+    position: relative;
+    margin: 20px;
+    width: 65%;
+}
+#praw p:not(.sub){
+    font-size: 15px;
+    color: #1d1d1d;
+    font-weight: 600;
+}
+#praw .sub{
+    font-size: 12px;
+    color: #4a4a4a;
+    font-weight: 500;
+}
+#praw br{
+    content: "";
+    margin: 3em;
+    display: block;
+    font-size: 24%;
+}
+#bottom{
+    position: relative;
+    height: 72px;
+    background-color: #ffffff;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 0px 0px 12px 12px;
+    margin: 0 20px 16px 20px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    color: #598527;
+    font-size: 14px;
+    font-weight: 600;
+}
+#bottom p{
+    margin-left: 20px;
+}
+.buto{
+    margin: 16px 16px 0 16px;
+    height: 80px;
+    display: flex;
+    background-color: #ffffff;
+    padding: 45px 22px;
+    align-items: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+    border-radius: 17px;
+}
+.buto img:first-of-type:not(.buto img:last-of-type){
+    width: 20px;
+    margin-right: 10px;
+}
+.buto img:last-of-type{
+    margin-left: auto;
+    width: 40px;
+}
+
+#lo{
+    margin-bottom: 0;
+    padding: 0 20px;
+    height: 60px;
+}
+.krecha{
+    height: 0.01rem;
+    width: 100%;
+    background-color: #dddddd;
+}
+.krecha2{
+    height: 0.01rem;
+    width: 100%;
+    background-color: #dddddd;
+    margin-left: 5%;
+    margin: 8px 0;
+}
+.content{
+    margin: 0 16px 0 16px;
+    padding: 0 20px 0px 20px;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 0px 0px 12px 12px;
+}
+.content .dana{
+    padding: 16px 0 16px 0;
+}
+
+.info{
+    font-size: 14px;
+    color:  rgba(74, 74, 74, 0.99);
+}
+
+.main{
+    font-size: 16px;
+    color: #1d1d1d;
+    font-weight: 600;
+}
+#aktualizuj{
+    margin: 16px 0;
+    margin-left: auto;
+    color: #014a93;
+    font-size: 14px;
+    text-align: center;
+    background-color: #dbeaf9;
+    padding: 6px 16px 6px 16px;
+    border-radius: 24px;
+    letter-spacing: 0.2px;
+}
+.disclaimer{
+    font-size: 8px;
+    color: #dddddd;
+    font-weight: 500;
+    margin: 16px 20px 16px 20px;
+}
+#szaro{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
+#wybierzdokument, #danedowodowe{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 95%;
+    width: 100%;
+    z-index: 9999;
+    background-color: #ffffff;
+    border-radius: 32px 32px 0px 0px;
+    display: flex;
+    flex-direction: column;
+}
+#wybierzdokument{
+    align-items: center;
+}
+
+#danedowodowe{
+    align-items: left;
+}
+
+#krech{
+    margin: 16px;
+    height: 0.38rem;
+    width: 35%;
+    background-color: #dddddd;
+    border-radius: 16px;
+}
+#wybierztitle{
+    font-size: 18px;
+    color: #1d1d1d;
+    margin: 48px;
+    font-weight: 600;
+}
+
+#danetitle{
+    font-size: 18px;
+    color: #1d1d1d;
+    margin: 32px 48px 0 32px;
+    font-weight: 600;    
+}
+.wybierzitem{
+    width: 90%;
+    /* height: 27%; */
+    margin-bottom: 32px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    padding: 32px 36px;
+    line-height: 1.2;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.wybierzitem#wi1 {
+    background-image: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/dowod_files/warstwa_1.png);
+}
+.wybierzitem#wi2 {
+    background-image: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/dowod_files/warstwa_2.png);
+}
+
+.wybierzitem button{
+    border-radius: 24px;
+    background-color: #014a93;
+    font-family: "Roboto Medium", "Roboto", sans-serif;
+    font-weight: 600;
+    color: #ffffff;
+    text-align: center;
+    line-height: normal;
+    font-size: 16px;
+    padding: 16px;
+    margin-top: 16px;
+    background-repeat: no-repeat;
+}
+
+.zamknijprzycisk{
+    border-radius: 24px;
+    background-color: white;
+    border: #014a93 solid 1px;
+    font-family: "Roboto Medium", "Roboto", sans-serif;
+    font-weight: 600;
+    color: #014a93;
+    text-align: center;
+    line-height: normal;
+    font-size: 16px;
+    padding: 16px;
+    background-repeat: no-repeat;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.wrocprzycisk{
+    border-radius: 24px;
+    border: white solid 1px;
+    background-color: white;
+    font-family: "Roboto Medium", "Roboto", sans-serif;
+    font-weight: 600;
+    color: #014a93;
+    text-align: center;
+    line-height: normal;
+    font-size: 16px;
+    padding: 16px;
+    background-repeat: no-repeat;
+    width: 90%;
+    margin: 0 auto;
+}
+
+
+.dowo{
+    font-size: 24px;
+    color: #1d1d1d;
+    font-weight: 600;
+    margin-bottom: 16px;
+}
+#wi1{
+    background-image: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/dowod_files/warstwa_1.png);
+}
+#wi2{
+    background-image: url(https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/dowod_files/warstwa_2.png);
+}
+.ovh{
+    overflow: hidden;
+}
+
+#arrow, #rotation{
+    padding: 8px;
+}
+
+#danebox{
+    margin: 16px;
+    padding: 16px;
+    border-radius: 16px;
+    border: 1px solid #dddddd;
+}
+
+.seria{
+    font-size: 24px;
+    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff;
-    border-radius: .4em;
-    padding: 1em;
-    cursor: pointer;
 }
 
-.Documents_leftContent__xj_Xj {
+#kopiuj{
+    color: #014a93;
+    font-size: 14px;
+    text-align: center;
+    background-color: #dbeaf9;
+    padding: 6px 16px 6px 16px;
+    border-radius: 24px;
+    letter-spacing: 0.2px;
+    margin-right: 16px;
+    margin-bottom: 16px;
+}
+
+#bottooom{
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
-        .Documents_cardRest__lc5Ht {
-            background-color: #fff;
-            border-radius: .4em;
-            padding: 1em;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: center;
-            text-align: center;
-            margin: 1em 0; 
-        }
-
-        @media (max-width: 768px) {
-            .Documents_container__SBKda {
-                padding: 10px;
-            }
-        }
-
-        .BottomNav_bottomNav__JQdpA {
-            width: 100%;
-            height: 90px;
-            position: fixed;
-            bottom: 0;
-            background-color: #f5f6fb;
-            border-top: 1px solid #d6d6d6;
-            z-index: 99;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            left: 0;
-        }
-
-        .BottomNav_bnTab__WzkWH {
-            width: 25%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            padding-top: 10px;
-        }
-
-        .BottomNav_bnTab__WzkWH img {
-            height: 24px;
-            margin-bottom: 4px;
-        }
-
-        .BottomNav_bnTab__WzkWH span {
-            font-size: .7em;
-            font-weight: 300;
-        }
-
-        .BottomNav_activeText__6iAIF {
-            color: var(--blue-active);
-        }
-
-        .BottomNav_bnTab__WzkWH img:active,
-        .BottomNav_bnTab__WzkWH img:focus,
-        .BottomNav_bnTab__WzkWH:active,
-        .BottomNav_bnTab__WzkWH:focus {
-            outline: none;
-            box-shadow: none;
-        }
-
-        .BottomNav_bnTab__WzkWH {
-            -webkit-tap-highlight-color: transparent;
-        }
-    </style>
-</head>
-<body>
-    <div class="Documents_container__SBKda">
-        <div class="Documents_toolbox__xju7f">
-            <p class="Documents_toolboxItem__2k7_t">Dodaj</p>
-            <p class="Documents_toolboxItem__2k7_t">Edytuj</p>
-        </div>
-        <h1 class="Documents_title__Q_ZwV">Dokumenty</h1>
-        <div class="Documents_searchContainer__H3tzU">
-            <img src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/ab002_search_grey.svg" alt="search" class="Documents_searchIcon__RYaih">
-            <input type="text" class="Documents_search__Ttv2M" placeholder="Szukaj">
-        </div>
-        <p style="margin-top: 2em; font-size: 1em; font-weight: bold;">Na pulpicie</p>
-<div class="Documents_singleCard__mzcqx" onclick="window.location.href='dowodnowy.html'">
-    <div class="Documents_leftContent__xj_Xj">
-        <img src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/coi_common_ui_ic_document_id.svg" alt="ID" width="25" height="25">
-        <p style="margin-left: 2em; font-weight: bold;">mDowód</p>
-    </div>
-    <img src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/ic_arrow_forward_gray.svg" alt="arrow" width="24" height="24">
-</div>
-        <p style="margin-top: 2em; font-size: 1em; font-weight: bold;">Pozostałe</p>
-        <div class="Documents_cardRest__lc5Ht">
-            <p style="font-size: 1.1em; margin-bottom: 0; font-weight: bold;">Chcesz przenieść tu dokument z pulpitu?</p>
-            <p style="font-weight: 300; color: #7B7C81; font-size: 0.9em; margin-top: 1.2em;">
-                Użyj przycisku Edytuj w prawym<br>górnym rogu.
-            </p>
-        </div>
-    </div>
-
-     <div class="BottomNav_bottomNav__JQdpA" >
-        <div class="BottomNav_bnTab__WzkWH" onclick="window.location.href='dashboard2.html'">
-            <img src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/ab001_home.svg" alt="dashboard">
-            <span>Start</span>
-        </div>
-        <div class="BottomNav_bnTab__WzkWH" onclick="window.location.href='documents2.html'">
-            <img src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/b002_framed_person.svg" alt="documents">
-            <span>Dokumenty</span>
-        </div>
-        <div class="BottomNav_bnTab__WzkWH" onclick="window.location.href='services2.html'">
-            <img src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/ac001_services.svg" alt="services">
-            <span>Usługi</span>
-        </div>
-        <div class="BottomNav_bnTab__WzkWH" onclick="window.location.href='qr2.html'">
-            <img src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/ai001_scanner_qr.svg" alt="qr">
-            <span>Kod QR</span>
-        </div>
-        <div class="BottomNav_bnTab__WzkWH" onclick="window.location.href='more2.html'">
-            <img src="https://ib05lvtzg55be6a6c6kpg3.ct8.pl/apka-3-0/images/ab010_more.svg" alt="more">
-            <span class="BottomNav_activeText__6iAIF">Więcej</span>
-        </div>
-    </div>
-</body>
-
-
-</html>
